--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,6 +1,6 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="/logo.png">
+    <link rel="icon" type="image/svg+xml" href="./assets/phishingSentinelLogo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phishing Sentinel</title>
   </head>
